deployment/sorriso-amigo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sorriso-amigo
  namespace: davi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sorriso-amigo
  template:
    metadata:
      labels:
        app: sorriso-amigo
    spec:
      containers:
      - name: sorriso-amigo
        image: registry.kevyn.com.br/davi/sorriso-amigo:1.0.0
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: sorriso-amigo
  namespace: davi
spec:
  selector:
    app: sorriso-amigo
  ports:
  - port: 4000
    targetPort: 4000
